@@ -1,3 +1,5 @@
+* Support authentication services
+
 Version 6.4.5 - 2022-09-06
 * Bug fixes (see mercurial logs for details)
 
